--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(#000000, #5c0303f6, #020138);
+  background: linear-gradient(#360202, #000d29f6, #420332, #680202e1, #020227);
+  backdrop-filter: blur(20px);
 }
 
 .container {
@@ -25,7 +26,7 @@ body {
 .container .circle:nth-child(1) {
   width: 450px;
   height: 450px;
-  background: linear-gradient(#002df550, #034f5cf6, #5a040457);
+  background: linear-gradient(#5b5c0385, #f020048a);
   animation: 1s ease-in infinite alternate;
   animation-name: move-up;
 }
@@ -41,7 +42,7 @@ body {
   height: 100px;
   top: 420px;
   left: 30px;
-  background: linear-gradient(#565c03f6, #ff060662);
+  background: linear-gradient(#fcfcfcf6, #06296962);
   backdrop-filter: blur(10px);
   animation: 0.5s ease-in infinite alternate;
   animation-name: move-down;
@@ -83,30 +84,19 @@ body {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
 
-.container img {
-  width: 100%;
-  height: 100%;
-}
 .circle .circle-bg img {
   width: 100%;
   height: 100%;
-  filter: contrast(150%);
-  filter: brightness(500%);
 }
 
 .circle .circle2-bg img {
   width: 100%;
   height: 100%;
-  filter: contrast(200%);
-  filter: opacity(80%);
-  filter: brightness(30%);
 }
 
 .circle .circle3-bg img {
   width: 100%;
   height: 100%;
-  filter: contrast(150%);
-  filter: brightness(500%);
 }
 
 .clock .clock-bg img {
@@ -162,7 +152,7 @@ body {
   position: absolute;
   width: 8px;
   height: 80px;
-  background: linear-gradient(#b0f1ea, #01a1f1);
+  background: black;
   z-index: 10;
   border-radius: 10px;
 }
